@@ -3,6 +3,12 @@
   ! as soon as the next release of GnuCash is out (2.0.0)                !
   ------------------------------------------------------------------------
 
+2007-02-13   Christian Stimming <stimming@tuhh.de>
+
+	* src/os/directory.h: Add GWEN_Directory_GetTmpDirectory()
+	function to have a uniform method for getting a temporary
+	directory, similar to g_get_tmp_dir().
+
 ===========================================================================
 MARK: released gwenhywfar-2.5.3 (2007/02/09)
 ===========================================================================
